# rocket-todo

./: Cargo.toml  Dockerfile  docker-compose.yaml
migrations/2024-06-19-092126_create_users/: up.sql
migrations/2024-06-20-041048_create_todo/: up.sql
src/: auth.rs  main.rs  model.rs  repositories.rs  schema.rs
src/rocket_routes/: auth.rs  mod.rs  todo.rs
tests/: auth.rs  todo.rs
tests/common/: mod.rs
