[package]
name = "my_cr8s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0"
serde="1.0.203"
diesel = { version = "2.1", features = ["chrono"] }
diesel-async = { version = "0.4", features = ["postgres"] }
chrono={version="0.4",features=["serde"]}
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools={version="0.1",features=["diesel_postgres","deadpool_redis"]}
argon2 = "0.5"
rand = "0.8"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
